Bug 1457338 - Stop touch drag on mouseUp. r=kats, a=jcristau

MozReview-Commit-ID: 4uPibB3DR1D

--HG--
extra : source : 1aeaff1e13f80f4ca820497345b279e67667f23b
extra : intermediate-source : ede4d13c43c670040e7b5973076031b0c9ea9726